# NeoNet-Blockchain

./: README.md  WHITEPAPER.md  docker-compose.yml
contracts/sol/: ComputeToken.sol  CrossRuntimeBridge.sol  DualGov.sol  NeoTimelock.sol  NeoToken.sol  NeoTokenVotes.sol  StakeAndVote.sol  WasmXToken.sol
contracts/wasm/: README.md
contracts/wasm/src/: stake_contract.rs
dapp/: index.html  package.json  vite.config.js
dapp/public/docs/: index.html
dapp/src/: App.jsx
dapp/src/components/: WalletModal.jsx  WalletProvider.jsx
dapp/src/lib/: wallet.js
go-consensus/: blockchain.go  blockchain_test.go  chain_store.json  go.mod  main.go  p2p.go
miner-client/: README.md  neonet_full_node.py  neonet_miner.py  neonet_miner_gui.py  neonet_p2p_miner.py  requirements.txt
python-ai-service/: requirements.txt
python-ai-service/app/: ai_engine.py  ai_miner.py  blockchain_persistence.py  contract_factory.py  decentralized_db.py  federated_learning.py  main.py  main_simplified.py  neonet_blockchain.py  network_takeover_protection.py  poi_consensus.py  pq_demo.py  pq_wrapper.py  pqc_real.py  real_ai_engine.py  security.py
rust-core/: Cargo.toml
rust-core/src/: bridge.rs  dual_runtime.rs  evm_adapter.rs  lib_test.rs  main.rs  unified_runtime.rs
scripts/: neonet_miner.py
