[package]
name = "neonet_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
sled = "0.34"
chrono = "0.4"
rand = "0.8"
ed25519-dalek = "2.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# Post-Quantum Cryptography
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.8"
pqcrypto-traits = "0.3"

[dev-dependencies]
tokio-test = "0.4"
